dtddir=$(datadir)/yelp/dtd

dtd_DATA =		\
	docbookx.dtd	\
	isoamsa.ent	\
	isoamsb.ent	\
	isoamsc.ent	\
	isoamsn.ent	\
	isoamso.ent	\
	isoamsr.ent	\
	isobox.ent	\
	isocyr1.ent	\
	isocyr2.ent	\
	isodia.ent	\
	isogrk1.ent	\
	isogrk2.ent	\
	isogrk3.ent	\
	isogrk4.ent	\
	isolat1.ent	\
	isolat2.ent	\
	isonum.ent	\
	isopub.ent	\
	isotech.ent	\
	catalog

EXTRA_DIST = $(dtd_DATA) catalog.in
