icon192dir = $(datadir)/icons/hicolor/192x192/apps

icon192_DATA = yelp-icon-big.png

icondir = $(datadir)/yelp/icons

icon_DATA = 						\
	yelp-icon-caution.png				\
	yelp-icon-important.png				\
	yelp-icon-note.png				\
	yelp-icon-tip.png				\
	yelp-icon-warning.png				\
	yelp-watermark-blockquote-00AB.png		\
	yelp-watermark-blockquote-00BB.png		\
	yelp-watermark-blockquote-201C.png		\
	yelp-watermark-blockquote-201D.png		\
	yelp-watermark-blockquote-201E.png

EXTRA_DIST = $(icon_DATA) $(icon192_DATA)
