yelp_xsltdir = join_paths(yelp_datadir, 'xslt')

configure_file(input: 'db2html.xsl.in',
               output: 'db2html.xsl',
               configuration: yelp_xsl_conf,
               install_dir: yelp_xsltdir)
configure_file(input: 'links2html.xsl.in',
               output: 'links2html.xsl',
               configuration: yelp_xsl_conf,
               install_dir: yelp_xsltdir)
configure_file(input: 'info2html.xsl.in',
               output: 'info2html.xsl',
               configuration: yelp_xsl_conf,
               install_dir: yelp_xsltdir)
configure_file(input: 'mal2html.xsl.in',
               output: 'mal2html.xsl',
               configuration: yelp_xsl_conf,
               install_dir: yelp_xsltdir)
configure_file(input: 'man2html.xsl.in',
               output: 'man2html.xsl',
               configuration: yelp_xsl_conf,
               install_dir: yelp_xsltdir)
configure_file(input: 'yelp-common.xsl.in',
               output: 'yelp-common.xsl',
               configuration: yelp_xsl_conf,
               install_dir: yelp_xsltdir)
