EXTRA_DIST =									\
	MathJax.js								\
	config/MMLorHTML.js							\
	extensions/HTML-CSS/handle-floats.js					\
	extensions/MathEvents.js						\
	extensions/MathMenu.js							\
	extensions/MathZoom.js							\
	extensions/mml2jax.js							\
	jax/element/mml/jax.js							\
	jax/element/mml/optable/Arrows.js					\
	jax/element/mml/optable/BasicLatin.js					\
	jax/element/mml/optable/CombDiacritMarks.js				\
	jax/element/mml/optable/CombDiactForSymbols.js				\
	jax/element/mml/optable/Dingbats.js					\
	jax/element/mml/optable/GeneralPunctuation.js				\
	jax/element/mml/optable/GeometricShapes.js				\
	jax/element/mml/optable/GreekAndCoptic.js				\
	jax/element/mml/optable/Latin1Supplement.js				\
	jax/element/mml/optable/LetterlikeSymbols.js				\
	jax/element/mml/optable/MathOperators.js				\
	jax/element/mml/optable/MiscMathSymbolsA.js				\
	jax/element/mml/optable/MiscMathSymbolsB.js				\
	jax/element/mml/optable/MiscSymbolsAndArrows.js				\
	jax/element/mml/optable/MiscTechnical.js				\
	jax/element/mml/optable/SpacingModLetters.js				\
	jax/element/mml/optable/SuppMathOperators.js				\
	jax/element/mml/optable/SupplementalArrowsA.js				\
	jax/element/mml/optable/SupplementalArrowsB.js				\
	jax/input/MathML/config.js						\
	jax/input/MathML/entities/a.js						\
	jax/input/MathML/entities/b.js						\
	jax/input/MathML/entities/c.js						\
	jax/input/MathML/entities/d.js						\
	jax/input/MathML/entities/e.js						\
	jax/input/MathML/entities/f.js						\
	jax/input/MathML/entities/fr.js						\
	jax/input/MathML/entities/g.js						\
	jax/input/MathML/entities/h.js						\
	jax/input/MathML/entities/i.js						\
	jax/input/MathML/entities/j.js						\
	jax/input/MathML/entities/k.js						\
	jax/input/MathML/entities/l.js						\
	jax/input/MathML/entities/m.js						\
	jax/input/MathML/entities/n.js						\
	jax/input/MathML/entities/o.js						\
	jax/input/MathML/entities/opf.js					\
	jax/input/MathML/entities/p.js						\
	jax/input/MathML/entities/q.js						\
	jax/input/MathML/entities/r.js						\
	jax/input/MathML/entities/s.js						\
	jax/input/MathML/entities/scr.js					\
	jax/input/MathML/entities/t.js						\
	jax/input/MathML/entities/u.js						\
	jax/input/MathML/entities/v.js						\
	jax/input/MathML/entities/w.js						\
	jax/input/MathML/entities/x.js						\
	jax/input/MathML/entities/y.js						\
	jax/input/MathML/entities/z.js						\
	jax/input/MathML/jax.js							\
	jax/output/HTML-CSS/autoload/annotation-xml.js				\
	jax/output/HTML-CSS/autoload/maction.js					\
	jax/output/HTML-CSS/autoload/menclose.js				\
	jax/output/HTML-CSS/autoload/mglyph.js					\
	jax/output/HTML-CSS/autoload/mmultiscripts.js				\
	jax/output/HTML-CSS/autoload/ms.js					\
	jax/output/HTML-CSS/autoload/mtable.js					\
	jax/output/HTML-CSS/autoload/multiline.js				\
	jax/output/HTML-CSS/config.js						\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Arrows.js			\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/BBBold.js			\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/BoxDrawing.js			\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/CombDiacritMarks.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Dingbats.js			\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/EnclosedAlphanum.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/GeneralPunctuation.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/GeometricShapes.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/GreekAndCoptic.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Latin1Supplement.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/LatinExtendedA.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/LetterlikeSymbols.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MathOperators.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MiscMathSymbolsB.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MiscSymbols.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MiscTechnical.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/PUA.js			\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/SpacingModLetters.js		\
	jax/output/HTML-CSS/fonts/TeX/AMS/Regular/SuppMathOperators.js		\
	jax/output/HTML-CSS/fonts/TeX/Caligraphic/Bold/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Caligraphic/Regular/Main.js		\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/BasicLatin.js		\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/Other.js			\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/PUA.js			\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/BasicLatin.js		\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/Other.js			\
	jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/PUA.js			\
	jax/output/HTML-CSS/fonts/TeX/Greek/Bold/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Greek/BoldItalic/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Greek/Italic/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Greek/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/Arrows.js			\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/CombDiacritMarks.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/CombDiactForSymbols.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/GeneralPunctuation.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/GeometricShapes.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/Latin1Supplement.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/LatinExtendedA.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/LatinExtendedB.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/LetterlikeSymbols.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/Main.js				\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/MathOperators.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/MiscMathSymbolsA.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/MiscSymbols.js			\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/MiscTechnical.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/SpacingModLetters.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/SuppMathOperators.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Bold/SupplementalArrowsA.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Italic/CombDiacritMarks.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Italic/GeneralPunctuation.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Italic/Latin1Supplement.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Italic/LetterlikeSymbols.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Italic/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Main/Regular/CombDiacritMarks.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Regular/GeometricShapes.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Main/Regular/MiscSymbols.js		\
	jax/output/HTML-CSS/fonts/TeX/Main/Regular/SpacingModLetters.js		\
	jax/output/HTML-CSS/fonts/TeX/Math/BoldItalic/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Math/Italic/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/BasicLatin.js		\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/CombDiacritMarks.js	\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/Other.js			\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/BasicLatin.js		\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/CombDiacritMarks.js	\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/Other.js			\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/BasicLatin.js		\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/CombDiacritMarks.js	\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/Other.js		\
	jax/output/HTML-CSS/fonts/TeX/Script/Regular/BasicLatin.js		\
	jax/output/HTML-CSS/fonts/TeX/Script/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Script/Regular/Other.js			\
	jax/output/HTML-CSS/fonts/TeX/Size1/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Size2/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Size3/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Size4/Regular/Main.js			\
	jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/BasicLatin.js		\
	jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/CombDiacritMarks.js	\
	jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/Main.js		\
	jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/Other.js		\
	jax/output/HTML-CSS/fonts/TeX/fontdata-extra.js				\
	jax/output/HTML-CSS/fonts/TeX/fontdata.js				\
	jax/output/HTML-CSS/jax.js						\
	jax/output/NativeMML/config.js						\
	jax/output/NativeMML/jax.js
